modules/wit/src/main/gen/com/github/bytecodealliance/language/parser/WitParser.java
// This is a generated file. Not intended for manual editing.
package com.github.bytecodealliance.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.bytecodealliance.language.psi.WitTypes.*;
import static com.github.bytecodealliance.language.psi.ParserExtension.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class WitParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return wit(b, l + 1);
  }

  /* ********************************************************** */
  // identifier-free
  public static boolean alias_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_name")) return false;
    if (!nextTokenIs(b, "<alias name>", ESCAPED, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIAS_NAME, "<alias name>");
    r = identifier_free(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ANGLE_L (<<term>> (COMMA <<term>>)* COMMA?)? ANGLE_R
  static boolean angle(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "angle")) return false;
    if (!nextTokenIs(b, ANGLE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANGLE_L);
    r = r && angle_1(b, l + 1, _term);
    r = r && consumeToken(b, ANGLE_R);
    exit_section_(b, m, null, r);
    return r;
  }

  // (<<term>> (COMMA <<term>>)* COMMA?)?
  private static boolean angle_1(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "angle_1")) return false;
    angle_1_0(b, l + 1, _term);
    return true;
  }

  // <<term>> (COMMA <<term>>)* COMMA?
  private static boolean angle_1_0(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "angle_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _term.parse(b, l);
    r = r && angle_1_0_1(b, l + 1, _term);
    r = r && angle_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA <<term>>)*
  private static boolean angle_1_0_1(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "angle_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!angle_1_0_1_0(b, l + 1, _term)) break;
      if (!empty_element_parsed_guard_(b, "angle_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA <<term>>
  private static boolean angle_1_0_1_0(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "angle_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && _term.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean angle_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "angle_1_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // AT identifier-free annotation-body?
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION, null);
    r = consumeToken(b, AT);
    p = r; // pin = 1
    r = r && report_error_(b, identifier_free(b, l + 1));
    r = p && annotation_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // annotation-body?
  private static boolean annotation_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2")) return false;
    annotation_body(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // <<parenthesis annotation-pair>>
  public static boolean annotation_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_body")) return false;
    if (!nextTokenIs(b, PARENTHESIS_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parenthesis(b, l + 1, WitParser::annotation_pair);
    exit_section_(b, m, ANNOTATION_BODY, r);
    return r;
  }

  /* ********************************************************** */
  // identifier-safe EQ annotation-value
  public static boolean annotation_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_pair")) return false;
    if (!nextTokenIs(b, "<annotation pair>", ESCAPED, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_PAIR, "<annotation pair>");
    r = identifier_safe(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && annotation_value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // VERSION
  // 	| identifier-safe
  public static boolean annotation_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_VALUE, "<annotation value>");
    r = consumeToken(b, VERSION);
    if (!r) r = identifier_safe(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // annotation*
  public static boolean annotations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotations")) return false;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATIONS, "<annotations>");
    while (true) {
      int c = current_position_(b);
      if (!annotation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotations", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // BRACE_L <<term>>* BRACE_R
  static boolean block(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACE_L);
    r = r && block_1(b, l + 1, _term);
    r = r && consumeToken(b, BRACE_R);
    exit_section_(b, m, null, r);
    return r;
  }

  // <<term>>*
  private static boolean block_1(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!_term.parse(b, l)) break;
      if (!empty_element_parsed_guard_(b, "block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // BRACE_L (<<term>> (COMMA <<term>>)* COMMA?)? BRACE_R
  static boolean brace(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "brace")) return false;
    if (!nextTokenIs(b, BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACE_L);
    r = r && brace_1(b, l + 1, _term);
    r = r && consumeToken(b, BRACE_R);
    exit_section_(b, m, null, r);
    return r;
  }

  // (<<term>> (COMMA <<term>>)* COMMA?)?
  private static boolean brace_1(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "brace_1")) return false;
    brace_1_0(b, l + 1, _term);
    return true;
  }

  // <<term>> (COMMA <<term>>)* COMMA?
  private static boolean brace_1_0(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "brace_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _term.parse(b, l);
    r = r && brace_1_0_1(b, l + 1, _term);
    r = r && brace_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA <<term>>)*
  private static boolean brace_1_0_1(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "brace_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!brace_1_0_1_0(b, l + 1, _term)) break;
      if (!empty_element_parsed_guard_(b, "brace_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA <<term>>
  private static boolean brace_1_0_1_0(PsiBuilder b, int l, Parser _term) {
    if (!recursion_guard_(b, l, "brace_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && _term.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean brace_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "brace_1_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // annotations KW_CONSTRUCTOR tuple (TO type-hint)?
  public static boolean constructor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor")) return false;
    if (!nextTokenIs(b, "<constructor>", AT, KW_CONSTRUCTOR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONSTRUCTOR, "<constructor>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_CONSTRUCTOR);
    p = r; // pin = 2
    r = r && report_error_(b, tuple(b, l + 1));
    r = p && constructor_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (TO type-hint)?
  private static boolean constructor_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_3")) return false;
    constructor_3_0(b, l + 1);
    return true;
  }

  // TO type-hint
  private static boolean constructor_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TO);
    r = r && type_hint(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // annotations  KW_INTERFACE interface-name interface-body
  public static boolean define_interface(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_interface")) return false;
    if (!nextTokenIs(b, "<define interface>", AT, KW_INTERFACE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFINE_INTERFACE, "<define interface>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_INTERFACE);
    p = r; // pin = 2
    r = r && report_error_(b, interface_name(b, l + 1));
    r = p && interface_body(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // annotations KW_TYPE identifier-safe EQ type-hint
  public static boolean define_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_type")) return false;
    if (!nextTokenIs(b, "<define type>", AT, KW_TYPE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFINE_TYPE, "<define type>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_TYPE);
    p = r; // pin = 2
    r = r && report_error_(b, identifier_safe(b, l + 1));
    r = p && report_error_(b, consumeToken(b, EQ)) && r;
    r = p && type_hint(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // annotations KW_ENUM identifier-free enum-body
  public static boolean enum_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_$")) return false;
    if (!nextTokenIs(b, "<enum $>", AT, KW_ENUM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM, "<enum $>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_ENUM);
    p = r; // pin = 2
    r = r && report_error_(b, identifier_free(b, l + 1));
    r = p && enum_body(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // <<brace semantic-number>>
  public static boolean enum_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body")) return false;
    if (!nextTokenIs(b, BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = brace(b, l + 1, WitParser::semantic_number);
    exit_section_(b, m, ENUM_BODY, r);
    return r;
  }

  /* ********************************************************** */
  // annotations KW_EXPORT export-term
  public static boolean export(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export")) return false;
    if (!nextTokenIs(b, "<export>", AT, KW_EXPORT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, EXPORT, "<export>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_EXPORT);
    p = r; // pin = 2
    r = r && export_term(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // function
  // 	| inline-interface
  // 	| include-name
  public static boolean export_term(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_term")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPORT_TERM, "<export term>");
    r = function(b, l + 1);
    if (!r) r = inline_interface(b, l + 1);
    if (!r) r = include_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // annotations KW_FLAGS identifier-free flags-body
  public static boolean flags(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "flags")) return false;
    if (!nextTokenIs(b, "<flags>", AT, KW_FLAGS)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FLAGS, "<flags>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_FLAGS);
    p = r; // pin = 2
    r = r && report_error_(b, identifier_free(b, l + 1));
    r = p && flags_body(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // <<brace semantic-number>>
  public static boolean flags_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "flags_body")) return false;
    if (!nextTokenIs(b, BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = brace(b, l + 1, WitParser::semantic_number);
    exit_section_(b, m, FLAGS_BODY, r);
    return r;
  }

  /* ********************************************************** */
  // annotations identifier-safe COLON function-signature
  public static boolean function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION, "<function>");
    r = annotations(b, l + 1);
    r = r && identifier_safe(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && function_signature(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // modifier? KW_FUNCTION tuple (TO type-hint)?
  public static boolean function_signature(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_signature")) return false;
    if (!nextTokenIs(b, "<function signature>", KW_FUNCTION, SYMBOL)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_SIGNATURE, "<function signature>");
    r = function_signature_0(b, l + 1);
    r = r && consumeToken(b, KW_FUNCTION);
    p = r; // pin = 2
    r = r && report_error_(b, tuple(b, l + 1));
    r = p && function_signature_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // modifier?
  private static boolean function_signature_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_signature_0")) return false;
    modifier(b, l + 1);
    return true;
  }

  // (TO type-hint)?
  private static boolean function_signature_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_signature_3")) return false;
    function_signature_3_0(b, l + 1);
    return true;
  }

  // TO type-hint
  private static boolean function_signature_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_signature_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TO);
    r = r && type_hint(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<angle type-hint>>
  public static boolean generic(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "generic")) return false;
    if (!nextTokenIs(b, ANGLE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = angle(b, l + 1, WitParser::type_hint);
    exit_section_(b, m, GENERIC, r);
    return r;
  }

  /* ********************************************************** */
  // SYMBOL | ESCAPED
  public static boolean identifier_free(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_free")) return false;
    if (!nextTokenIs(b, "<identifier free>", ESCAPED, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER_FREE, "<identifier free>");
    r = consumeToken(b, SYMBOL);
    if (!r) r = consumeToken(b, ESCAPED);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SYMBOL | ESCAPED
  public static boolean identifier_safe(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_safe")) return false;
    if (!nextTokenIs(b, "<identifier safe>", ESCAPED, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER_SAFE, "<identifier safe>");
    r = consumeToken(b, SYMBOL);
    if (!r) r = consumeToken(b, ESCAPED);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // annotations KW_IMPORT export-term
  public static boolean import_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "import_$")) return false;
    if (!nextTokenIs(b, "<import $>", AT, KW_IMPORT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, IMPORT, "<import $>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_IMPORT);
    p = r; // pin = 2
    r = r && export_term(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // annotations KW_INCLUDE include-name
  public static boolean include(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include")) return false;
    if (!nextTokenIs(b, "<include>", AT, KW_INCLUDE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, INCLUDE, "<include>");
    r = annotations(b, l + 1);
    r = r && consumeToken(b, KW_INCLUDE);
    p = r; // pin = 2
    r = r && include_name(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // identifier-safe (COLON identifier-safe) (SLASH interface-name) package-version?
  //   | interface-name
  public static boolean include_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include_name")) return false;
    if (!nextTokenIs(b, "<include name>", ESCAPED, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INCLUDE_NAME, "<include name>");
    r = include_name_0(b, l + 1);
    if (!r) r = interface_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // identifier-safe (COLON identifier-safe) (SLASH interface-name) package-version?
  private static boolean include_name_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include_name_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier_safe(b, l + 1);
    r = r && include_name_0_1(b, l + 1);
    r = r && include_name_0_2(b, l + 1);
    r = r && include_name_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COLON identifier-safe
  private static boolean include_name_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include_name_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && identifier_safe(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SLASH interface-name
  private static boolean include_name_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include_name_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SLASH);
    r = r && interface_name(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // package-version?
  private static boolean include_name_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include_name_0_3")) return false;
    package_version(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // interface-name COLON KW_INTERFACE interface-body
  public static boolean inline_interface(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inline_interface")) return false;
    if (!nextTokenIs(b, "<inline interface>", ESCAPED, SYMBOL)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, INLINE_INTERFACE, "<inline interface>");
    r = interface_name(b, l + 1);
    r = r && consumeTokens(b, 2, COLON, KW_INTERFACE);
    p = r; // pin = 3
    r = r && interface_body(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // <<block interface-element>>
  public static boolean interface_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "interface_body")) return false;
    if (!nextTokenIs(b, BRACE_L)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = block(b, l + 1, WitParser::interface_element);
    exit_section_(b, m, INTERFACE_BODY, r);
    return r;
  }

  /* ********************************************************** */
  // SEMICOLON
  // 	| use
  // 	| define-type
  // 	| resource
  // 	| record
  // 	| flags
  // 	| enum
  // 	| variant
  // 	| function
  static boolean interface_element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "interface_element")) return false;
    boolean r;
    r = consumeToken(b, SEMICOLON);
    if (!r) r = use(b, l + 1);
    if (!r) r = define_type(b, l + 1);
    if (!r) r = resource(b, l + 1);
    if (!r) r = record(b, l + 1);
    if (!r) r = flags(b, l + 1);
    if (!r) r = enum_$(b, l + 1);
    if (!r) r = variant(b, l + 1);
    if (!r) r = function(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // SYMBOL | ESCAPED
  public static boolean interface_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "interface_name")) return false;
    if (!nextTokenIs(b, "<interface name>", ESCAPED, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INTERFACE_NAME, "<interface name>");
    r = consumeToken(b, SYMBOL);
    if (!r) r = consumeToken(b, ESCAPED);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // annotations identifier-safe COLON function-signature
  public static boolean method(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "method")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, METHOD, "<method>");
    r = annotations(b, l + 1);
    r = r && identifier_safe(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && function_signature(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SYMBOL
  public static boolean modifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "modifier")) return false;
    if (!nextTokenIs(b, SYMBOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYMBOL);
    exit_section_(b, m, MODIFIER, r);
    return r;
  }
